# coverage-notes

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt  sample.xml
.github/workflows/: ci.yml  codeql-analysis.yml  coverage-notes-pr.yml  linux.yml  macos.yml  windows.yml
src/: CMakeLists.txt  main.cpp
src/cobertura/: CMakeLists.txt  cobertura_coverage.cpp  cobertura_coverage.hpp  cobertura_parser.cpp  cobertura_parser.hpp
src/core/: CMakeLists.txt  CoverageInfo.cpp  CoverageInfo.h  coverage_info.hpp  coverage_summary.cpp  coverage_summary.hpp
src/jacoco/: CMakeLists.txt  JacocoParser.cpp  JacocoParser.h  jacoco_coverage.cpp  jacoco_coverage.hpp  jacoco_parser.cpp  jacoco_parser.hpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt  CoverageInfoTests.cpp  test_coverage_summary.cpp
test/jacoco/: CMakeLists.txt  JacocoParserTests.cpp
